--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-26 10:14:15
-# Total rules: 6768
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-27 10:12:12
+# Total rules: 6760
 
 .0914.global.ssl.fastly.net
 .0a0d-d3l1vr.b-cdn.net
@@ -106,10 +106,10 @@
 .a12600010354.cdn.optimizely.com
 .a12856330147.cdn.optimizely.com
 .a12862740503.cdn.optimizely.com
-.a12879740169.cdn.optimizely.com
-.a12894770201.cdn.optimizely.com
 .a130654005.cdn.optimizely.com
 .a13302150067.cdn.optimizely.com
+.a134224613.cdn.optimizely.com
+.a1356485878.cdn.optimizely.com
 .a1370244502.cdn.optimizely.com
 .a14127233.cdn.optimizely.com
 .a14222970305.cdn.optimizely.com
@@ -123,7 +123,6 @@
 .a15766640529.cdn.optimizely.com
 .a15781310249.cdn.optimizely.com
 .a15782051476.cdn.optimizely.com
-.a15784060578.cdn.optimizely.com
 .a15928870500.cdn.optimizely.com
 .a16059120202.cdn.optimizely.com
 .a16233910394.cdn.optimizely.com
@@ -187,7 +186,6 @@
 .a19963491707.cdn.optimizely.com
 .a20013431166.cdn.optimizely.com
 .a20035616984.cdn.optimizely.com
-.a20105345443.cdn.optimizely.com
 .a20137790451.cdn.optimizely.com
 .a20139847744.cdn.optimizely.com
 .a20151573008.cdn.optimizely.com
@@ -204,7 +202,7 @@
 .a20678180166.cdn.optimizely.com
 .a20758793323.cdn.optimizely.com
 .a208064236.cdn.optimizely.com
-.a20920185503.cdn.optimizely.com
+.a20896371799.cdn.optimizely.com
 .a20936640092.cdn.optimizely.com
 .a20976504213.cdn.optimizely.com
 .a21006041081.cdn.optimizely.com
@@ -213,6 +211,7 @@
 .a21017440049.cdn.optimizely.com
 .a21018620252.cdn.optimizely.com
 .a21023511730.cdn.optimizely.com
+.a21089662478.cdn.optimizely.com
 .a21093521246.cdn.optimizely.com
 .a21162760069.cdn.optimizely.com
 .a21238941731.cdn.optimizely.com
@@ -220,13 +219,13 @@
 .a21279620132.cdn.optimizely.com
 .a2129670914.cdn.optimizely.com
 .a21358250631.cdn.optimizely.com
+.a21362120414.cdn.optimizely.com
 .a21362261371.cdn.optimizely.com
 .a21362900246.cdn.optimizely.com
 .a21394690517.cdn.optimizely.com
-.a21645491094.cdn.optimizely.com
-.a21711352012.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21777400434.cdn.optimizely.com
+.a21837592637.cdn.optimizely.com
 .a21861931614.cdn.optimizely.com
 .a21875130079.cdn.optimizely.com
 .a22021240096.cdn.optimizely.com
@@ -265,8 +264,6 @@
 .a24312020311.cdn.optimizely.com
 .a24389681160.cdn.optimizely.com
 .a24397840812.cdn.optimizely.com
-.a24427100571.cdn.optimizely.com
-.a24489790252.cdn.optimizely.com
 .a24561750242.cdn.optimizely.com
 .a24591270085.cdn.optimizely.com
 .a24612720185.cdn.optimizely.com
@@ -291,7 +288,6 @@
 .a24987910037.cdn.optimizely.com
 .a25010540072.cdn.optimizely.com
 .a25011560114.cdn.optimizely.com
-.a25048791137.cdn.optimizely.com
 .a25166270452.cdn.optimizely.com
 .a25178000050.cdn.optimizely.com
 .a25229420187.cdn.optimizely.com
@@ -307,7 +303,6 @@
 .a25451710626.cdn.optimizely.com
 .a25475310284.cdn.optimizely.com
 .a25522010911.cdn.optimizely.com
-.a25546140325.cdn.optimizely.com
 .a25563730275.cdn.optimizely.com
 .a25577230094.cdn.optimizely.com
 .a25597130164.cdn.optimizely.com
@@ -316,6 +311,7 @@
 .a25658580324.cdn.optimizely.com
 .a25668020029.cdn.optimizely.com
 .a25670000279.cdn.optimizely.com
+.a25674010234.cdn.optimizely.com
 .a25678140304.cdn.optimizely.com
 .a25683390326.cdn.optimizely.com
 .a25683900258.cdn.optimizely.com
@@ -348,6 +344,8 @@
 .a26549020246.cdn.optimizely.com
 .a26564690691.cdn.optimizely.com
 .a26584670725.cdn.optimizely.com
+.a26589780290.cdn.optimizely.com
+.a26592620004.cdn.optimizely.com
 .a26604040285.cdn.optimizely.com
 .a2665520353.cdn.optimizely.com
 .a26669750187.cdn.optimizely.com
@@ -377,6 +375,7 @@
 .a275532918.cdn.optimizely.com
 .a27673780102.cdn.optimizely.com
 .a27947990225.cdn.optimizely.com
+.a27988430061.cdn.optimizely.com
 .a27990360155.cdn.optimizely.com
 .a27998290150.cdn.optimizely.com
 .a28007920049.cdn.optimizely.com
@@ -390,6 +389,7 @@
 .a29022480071.cdn.optimizely.com
 .a29086100055.cdn.optimizely.com
 .a29141630018.cdn.optimizely.com
+.a29203880216.cdn.optimizely.com
 .a29208100149.cdn.optimizely.com
 .a29330850058.cdn.optimizely.com
 .a29494440593.cdn.optimizely.com
@@ -398,7 +398,6 @@
 .a29596130061.cdn.optimizely.com
 .a29623890030.cdn.optimizely.com
 .a29730520486.cdn.optimizely.com
-.a29742610112.cdn.optimizely.com
 .a29745850123.cdn.optimizely.com
 .a29755160391.cdn.optimizely.com
 .a29773460025.cdn.optimizely.com
@@ -425,7 +424,6 @@
 .a4368606971.cdn.optimizely.com
 .a4477903919.cdn.optimizely.com
 .a4533470681104384.cdn.optimizely.com
-.a4557234282168320.cdn.optimizely.com
 .a4602001816813568.cdn.optimizely.com
 .a4614783295553536.cdn.optimizely.com
 .a4621041136.cdn.optimizely.com
@@ -465,7 +463,6 @@
 .a5961084.cdn.optimizely.com
 .a6023320244584448.cdn.optimizely.com
 .a6040864640729088.cdn.optimizely.com
-.a6071352323473408.cdn.optimizely.com
 .a6076186451771392.cdn.optimizely.com
 .a61135178.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
@@ -473,6 +470,7 @@
 .a6147784059912192.cdn.optimizely.com
 .a6157793305034752.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
+.a6207300250632192.cdn.optimizely.com
 .a6238166017900544.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
@@ -482,7 +480,6 @@
 .a6524475903049728.cdn.optimizely.com
 .a6529002483.cdn.optimizely.com
 .a6558036.cdn.optimizely.com
-.a6561280243.cdn.optimizely.com
 .a659682401.cdn.optimizely.com
 .a6606848644612096.cdn.optimizely.com
 .a6654701179.cdn.optimizely.com
@@ -498,13 +495,13 @@
 .a752092193.cdn.optimizely.com
 .a752671897.cdn.optimizely.com
 .a7589613084.cdn.optimizely.com
+.a7620104.cdn.optimizely.com
 .a7740361315.cdn.optimizely.com
 .a7779470749.cdn.optimizely.com
 .a7808901045.cdn.optimizely.com
 .a8204720027.cdn.optimizely.com
 .a8253175392.cdn.optimizely.com
 .a8270235338.cdn.optimizely.com
-.a8382950752.cdn.optimizely.com
 .a8392411042.cdn.optimizely.com
 .a8422644581.cdn.optimizely.com
 .a8467205636.cdn.optimizely.com
@@ -552,7 +549,6 @@
 .ad-backend-prod-flatfiles.s3.amazonaws.com
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-dal-prd-1056964492.ap-northeast-1.elb.amazonaws.com
-.ad-format-sg.tiktokv.com
 .ad-host-backup-america.oss-us-west-1.aliyuncs.com
 .ad-host-backup-america.s3.us-west-1.amazonaws.com
 .ad-host-backup-asia.oss-ap-southeast-1.aliyuncs.com
@@ -570,6 +566,7 @@
 .ad-interactions-prod-lb-484900216.ap-northeast-1.elb.amazonaws.com
 .ad-interactions-prod-lb-773417274.us-east-2.elb.amazonaws.com
 .ad-log-upload.mihoyo.com
+.ad-material.ys7.com
 .ad-particlenews-com-2-1579123584.us-west-2.elb.amazonaws.com
 .ad-pdf.s3.amazonaws.com
 .ad-serve.b-cdn.net
@@ -733,9 +730,9 @@
 .ads-meta-logo.s3.amazonaws.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
+.ads-product-integration.googleusercontent.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
-.ads-rendering-prod.corp.google.com
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-server-lb-145243948.ap-southeast-1.elb.amazonaws.com
 .ads-setu-proxy-eu.amazon.com
@@ -793,8 +790,6 @@
 .adsclick.qq.com
 .adsdk.microsoft.com
 .adsdk.vivo.com.cn
-.adsdkpreprod.afd.azureedge.net
-.adsdkpreprod.azureedge.net
 .adsdkprod.afd.azureedge.net
 .adsdkprod.azureedge.net
 .adse.test.ximalaya.com
@@ -885,7 +880,6 @@
 .advertising.twitter.com
 .advice-ads.s3.amazonaws.com
 .advp.apple.com
-.advst.cp33.ott.cibntv.net
 .adwbs.ximalaya.com
 .adweb.ximalaya.com
 .adwords.google.com
@@ -973,7 +967,6 @@
 .ana-collector-alb-eu-iron-1900204823.us-east-1.elb.amazonaws.com
 .ana-collector-alb-eu-iron-650919269.eu-north-1.elb.amazonaws.com
 .ana-collector-alb-eu-iron-75689409.eu-central-1.elb.amazonaws.com
-.ana-collector-alb-us-iron-1288770839.eu-central-1.elb.amazonaws.com
 .ana-collector-alb-us-iron-1731170687.us-east-2.elb.amazonaws.com
 .ana-collector-alb-us-iron-941119557.us-west-1.elb.amazonaws.com
 .analy.qq.com
@@ -1001,6 +994,7 @@
 .analytics.bloomberg.com
 .analytics.brave.com
 .analytics.cloud.unity3d.com
+.analytics.datatables.net
 .analytics.dev.azure.com
 .analytics.facebook.com
 .analytics.framer.com
@@ -1023,8 +1017,6 @@
 .analytics.msnbc.msn.com
 .analytics.notify.elsevier.com
 .analytics.p01.eloqua.com
-.analytics.p04.eloqua.com
-.analytics.p06.eloqua.com
 .analytics.paddle.com
 .analytics.pnw.appsvc.an.adobe.com
 .analytics.podtrac.com
@@ -1116,6 +1108,7 @@
 .api.waptest.taobao.com
 .api.xmpush.global.xiaomi.com
 .api.youqian.baidu.com
+.api.youtu.qq.com
 .apiinit.amap.com
 .apikey.map.qq.com
 .apiproxy-log-nlb-0dbe90394fe752bf.elb.us-west-2.amazonaws.com
@@ -1201,7 +1194,6 @@
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
-.astellasusllc.data.adobedc.net
 .atanx.alicdn.com
 .atanx2.alicdn.com
 .athena.archive.org
@@ -1273,7 +1265,7 @@
 .bcbsks.data.adobedc.net
 .bce.baidu.com
 .bchtstmets.data.adobedc.net
-.bd.com.data.adobedc.net
+.bcs.data.adobedc.net
 .bd.hd.sohu.com
 .bdg-analytics.appspot.com
 .bdplus.baidu.com
@@ -1502,11 +1494,11 @@
 .cdn.stat-track.com.akamaized.net
 .cdn.tanx.com
 .cdn3.optimizely.com
+.cdnprojectagora.s3.amazonaws.com
 .cdnweb3.pages.dev
 .cdp.cloud.unity.cn
 .cdp.cloud.unity3d.com
 .ce-data-collector-api-prod-alb2-1611447619.ap-south-1.elb.amazonaws.com
-.cedarssinaimedicalcenter.data.adobedc.net
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
 .cert-test.sandbox.google.com
@@ -1522,7 +1514,6 @@
 .channel4.data.adobedc.net
 .channelusa.samsung.com
 .chaoku.oss-cn-chengdu.aliyuncs.com
-.chartboost.com.akamaized.net
 .chat1.jd.com
 .chatpush.miguvideo.com
 .check.tep.test.ajo.adobe.com
@@ -1575,6 +1566,7 @@
 .cloudflareinsights.com
 .cloudfront-labs.amazonaws.com
 .cloudpush.iqiyi.com
+.clubhkt.data.adobedc.net
 .cm.baidu.com
 .cm.bilibili.com
 .cm.jd.com
@@ -1599,7 +1591,6 @@
 .cnc-ad-script-uncached.b-cdn.net
 .cnzz.com
 .co.data.adobedc.net
-.coca-cola.com.data.adobedc.net
 .coins.arstechnica.com
 .collect.alipay.com
 .collect.ctc.ximalaya.com
@@ -3290,7 +3281,6 @@
 .djv99sxoqpv11.cloudfront.net
 .djvby0s5wa7p7.cloudfront.net
 .djwf0dl2q9i99.cloudfront.net
-.djxzp32zyq.data.adobedc.net
 .djz9es32qen64.cloudfront.net
 .dk45agakx3yfl.cloudfront.net
 .dk4w74mt6naf3.cloudfront.net
@@ -3742,6 +3732,7 @@
 .fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
+.ffc-word-telemetry.officeapps.live.com
 .ffe390afd658c19dcbf707e0597b846d.de
 .fifththirdbank.data.adobedc.net
 .filament-stats.herokuapp.com
@@ -3849,7 +3840,6 @@
 .gamma.cachefly.net
 .gaode-jmacs.m.taobao.com
 .gatecollect.kugou.com
-.gateway-collector-eu-lb-406824233.eu-central-1.elb.amazonaws.com
 .gateway-collector-prod-lb-603414359.us-east-1.elb.amazonaws.com
 .gator.volces.com
 .gb.corp.163.com
@@ -3865,7 +3855,6 @@
 .gen.alicdn.com
 .geo.adobe.com
 .geo2.adobe.com
-.geoapi123.appspot.com
 .geolocation.nexusmedia.workers.dev
 .geotargetly-1a441.appspot.com
 .geover-prod.do.dsp.mp.microsoft.com
@@ -3895,7 +3884,6 @@
 .global-ad-extranet-pri-azams.alb.xiaomi.com
 .global-ad-intl-pri-alisgp.alb.xiaomi.com
 .global-staticplat.cdn.bcebos.com
-.globalnews.ca.data.adobedc.net
 .globalvideo.cdn.pandora.intl.xiaomi.com
 .gma.alicdn.com
 .gmfinancial.data.adobedc.net
@@ -4083,6 +4071,7 @@
 .homeborn.cn
 .hoplink.ksosoft.com
 .horus-prod-collector-alb-1702501938.eu-central-1.elb.amazonaws.com
+.hot.browser.intl.miui.com
 .hotchat-im.iqiyi.com
 .houyi.kkmh.com
 .hpd.baidu.com
@@ -4282,7 +4271,6 @@
 .isdspeed.qq.com
 .isite.baidu.com
 .isx.unity3d.com
-.it16akp2xi.data.adobedc.net
 .its-dori.tumblr.com
 .itsdata.map.baidu.com
 .ivy.pconline.com.cn
@@ -4413,6 +4401,7 @@
 .location-sg.tiktokv.com
 .location-v6-sg.tiktokv.com
 .location-v6-va.tiktokv.com
+.location-va.tiktokv.com
 .location.services.mozilla.com
 .location.ximalaya.com
 .log-04e01638.us.v2.we-stats.com
@@ -4424,6 +4413,7 @@
 .log-26d6cd71.us.v2.we-stats.com
 .log-2c864c4b.eu.v2.we-stats.com
 .log-2f6769e4.us.v2.we-stats.com
+.log-2ffe60ee.au.v2.we-stats.com
 .log-3347ea06.bzl.v2.we-stats.com
 .log-3fbbe2c8.us.v2.we-stats.com
 .log-453ea5e6.ind.v2.we-stats.com
@@ -4456,7 +4446,7 @@
 .log-cba38438.us.v2.we-stats.com
 .log-d177b4a1.us.v2.we-stats.com
 .log-d515dc6a.suk.v2.we-stats.com
-.log-db166e4b.ind.v2.we-stats.com
+.log-dab0bb57.us.v2.we-stats.com
 .log-dbff2e04.us.v2.we-stats.com
 .log-dfb31537.us.v2.we-stats.com
 .log-e206d7e2.us.v2.we-stats.com
@@ -4624,6 +4614,7 @@
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
 .mam.netease.com
+.mam6.netease.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .marcus.com.data.adobedc.net
@@ -4754,11 +4745,9 @@
 .mj-snowplow-static-js.s3.amazonaws.com
 .mjca-yijws.global.ssl.fastly.net
 .ml314.com
-.mlbshop.com.data.adobedc.net
 .mmgame.qpic.cn
 .mn.qwant.com
 .mnaspm.com
-.mnjyelvr0z.data.adobedc.net
 .mo.baidu.com
 .mo.kugou.com
 .mo.res.wpscdn.cn
@@ -4781,6 +4770,7 @@
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
+.mobileservice.cn
 .mobondhrd.appspot.com
 .mobwsa.ximalaya.com
 .mon-i18n.tiktokv.com
@@ -4832,6 +4822,7 @@
 .mssdk-ru.tiktokv.com
 .mssdk-sg.tiktokv.com
 .mssdk.bytedance.com
+.mssdk.snssdk.com
 .mssdk.volces.com
 .mssdk.zijieapi.com
 .mssdk3-normal-hj.zijieapi.com
@@ -4868,6 +4859,7 @@
 .nadvideo.baidu.com
 .nadvideo2.baidu.com
 .napaprolink.com.data.adobedc.net
+.nationalbankofcanada.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
 .nba2k24-telemetry-prod-elb-1395770358.us-east-1.elb.amazonaws.com
@@ -4899,6 +4891,7 @@
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
 .nfa.jd.com
+.nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
@@ -5000,6 +4993,7 @@
 .otf.msn.com
 .oth.eve.qq.com
 .ott.video.qq.com
+.oupar5ykmi.data.adobedc.net
 .outbrain.map.fastly.net
 .outlookads.live.com
 .outreach.crossref.org
@@ -5130,11 +5124,9 @@
 .pgtus1-excel-telemetry-vip.officeapps.live.com
 .pgtus1-powerpoint-telemetry-vip.officeapps.live.com
 .pgtus1-word-telemetry-vip.officeapps.live.com
-.pgtus2-excel-telemetry-vip.officeapps.live.com
 .pgtus3-excel-telemetry-vip.officeapps.live.com
 .pgtus3-powerpoint-telemetry-vip.officeapps.live.com
 .pgtus3-word-telemetry-vip.officeapps.live.com
-.pgtus4-excel-telemetry-vip.officeapps.live.com
 .phs.tanx.com
 .pi.ias.xiaomi.com
 .picanalysis.vivo.com.cn
@@ -5237,7 +5229,6 @@
 .prebid-server-production.herokuapp.com
 .predataclient.b-cdn.net
 .preferences.premierleague.test.ajo.adobe.com
-.preload.xiaomi.com
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
@@ -5263,7 +5254,6 @@
 .prod-pod9-dvc-telemetry-podlbalb-1234979978.us-west-2.elb.amazonaws.com
 .prod-telemetry-10-archive.s3.eu-central-1.amazonaws.com
 .prodregistryv2.org
-.product-analytics-prod-ecs-lb-817263848.us-west-2.elb.amazonaws.com
 .profitor-log-collector-75554669.us-east-1.elb.amazonaws.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
@@ -5315,7 +5305,6 @@
 .pv.sogou.com
 .pv.sohu.com
 .pvstat.html5.qq.com
-.pwc.com.data.adobedc.net
 .px-intl.ucweb.com
 .px.ucweb.com
 .px.wpk.quark.cn
@@ -5437,7 +5426,6 @@
 .rg-3tn.pages.dev
 .rgea-collector-prod-1144707942.us-west-2.elb.amazonaws.com
 .rh.qq.com
-.rhcvuy2die.data.adobedc.net
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
@@ -5455,6 +5443,7 @@
 .rnd-aresocean-commercial.huawei.com
 .robalmeister.workers.dev
 .rocketaccount.com.data.adobedc.net
+.rogerscommunicationspartnership.data.adobedc.net
 .roi.soulapp.cn
 .romeccs.microsoft.com
 .routertips.video.qq.com
@@ -5507,7 +5496,6 @@
 .s.skimresources.com
 .s.so.360.cn
 .s3-use1-epx-d-f1ev1-telemetry-dropbox.s3.amazonaws.com
-.s42w1plegi.data.adobedc.net
 .s7qkhuw0kp.data.adobedc.net
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -5548,6 +5536,8 @@
 .scorecardresearch.com
 .scribe.twitter.com
 .sd-tagging.azurefd.net
+.sdac.lenovomm.com
+.sdfp.snssdk.com
 .sdk-collector-prod-723125464.eu-central-1.elb.amazonaws.com
 .sdk.fra-01.braze.eu.cdn.cloudflare.net
 .sdk.iad-01.braze.com.cdn.cloudflare.net
@@ -5652,6 +5642,7 @@
 .siteintercept.qualtrics.com.cdn.cloudflare.net
 .sjarvis.taobao.com
 .skdisplay.jd.com
+.skydeutschland.data.adobedc.net
 .skyshowtimeuk.data.adobedc.net
 .slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
@@ -5719,6 +5710,7 @@
 .splashqqlive.gtimg.com
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spotlight.accuweather.com
 .spotops.spot.im
@@ -5769,7 +5761,6 @@
 .stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
-.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
@@ -5918,7 +5909,6 @@
 .teams.nel.measure.office.net
 .techain.baidu.com
 .techhome-js.github.io
-.tele-analytics-917052278.us-east-1.elb.amazonaws.com
 .telecommandsvc.microsoft.com
 .telem-edge.smartscreen.microsoft.com
 .telemetry-coverage.mozilla.org
@@ -5960,6 +5950,7 @@
 .tgtus1-powerpoint-telemetry-vip.officeapps.live.com
 .theamericanautoassociation.data.adobedc.net
 .thecooperativebank.data.adobedc.net
+.themethodisthospitalhouston.data.adobedc.net
 .theta.sogou.com
 .theta.sogoucdn.com
 .theweathercompany.data.adobedc.net
@@ -6290,7 +6281,6 @@
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
 .w4aa025brr.data.adobedc.net
-.w8a27b25y5.data.adobedc.net
 .wa.gtimg.com
 .walmartasda.data.adobedc.net
 .wan.360.cn
@@ -6375,7 +6365,6 @@
 .ws.sj.qq.com
 .wspeed.qq.com
 .wtr-digital-analytics.ew.r.appspot.com
-.wttg8wtofm.data.adobedc.net
 .wwads.cn
 .wwis-dubc1-vip60.adobe.com
 .www-fmhy.pages.dev
@@ -6455,7 +6444,6 @@
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yunxinfw.com
-.ywx79wmimh.data.adobedc.net
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .zau9tq0po5.data.adobedc.net
 .zdstatic.speedtest.net
@@ -6514,6 +6502,7 @@ adsz.wagbridge.tmall.alimama.com
 adt.cpatrk.net
 adtrack.e.kuaishou.com
 advert.lx.netease.com
+advst.cp33.ott.cibntv.net
 adx.alimama.com
 afdconf.baidu.com
 affportal.bhphoto.com
@@ -6663,6 +6652,7 @@ misc.wcd.qq.com
 mixern.sina.cn
 mixers.sina.cn
 mob.bz.mgtv.com
+monitor.uu.qq.com
 mp.huangye.miui.com
 mpush-api.aliyun.com
 msmetrics-test.ws.sonos.com
@@ -6705,7 +6695,6 @@ render-web.11222.cn
 report.yumobi.cn
 rprain.bz.mgtv.com
 saxs.sina.cn
-sdfp.snssdk.com
 sdkapp.uve.weibo.com
 secode2.hd.xiaomi.com
 sentry.d.mi.com
@@ -6727,6 +6716,7 @@ stnetsdk.vivo.com.cn
 switch.cup.com.cn
 sxcdn1.herokuapp.com
 sxcdn5.herokuapp.com
+t.l.qq.com
 t1.g.mi.com
 tc.hd.xiaomi.com
 tel.fe01.hh.xiaomi.com
@@ -6753,6 +6743,8 @@ userid.xiaomi.com
 vd.l.qq.com
 vd0.market.xiaomi.com
 vd1.market.xiaomi.com
+vd6.l.qq.com
+vi.l.qq.com
 video.xiaomi.com
 vip.bz.mgtv.com
 vmindhls.tc.qq.com
