--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-31 11:36:52
-# Total rules: 6829
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-01 10:41:43
+# Total rules: 6825
 
 .0914.global.ssl.fastly.net
 .0a0d-d3l1vr.b-cdn.net
@@ -100,7 +100,6 @@
 .a11347113422.cdn.optimizely.com
 .a11356001945.cdn.optimizely.com
 .a11391265293.cdn.optimizely.com
-.a11492672549.cdn.optimizely.com
 .a11806872970.cdn.optimizely.com
 .a11925324355.cdn.optimizely.com
 .a1208440116.cdn.optimizely.com
@@ -113,6 +112,7 @@
 .a12879740169.cdn.optimizely.com
 .a130654005.cdn.optimizely.com
 .a13302150067.cdn.optimizely.com
+.a134224613.cdn.optimizely.com
 .a1356485878.cdn.optimizely.com
 .a1370244502.cdn.optimizely.com
 .a14127233.cdn.optimizely.com
@@ -128,6 +128,7 @@
 .a15766640529.cdn.optimizely.com
 .a15781310249.cdn.optimizely.com
 .a15782051476.cdn.optimizely.com
+.a15784060578.cdn.optimizely.com
 .a15928870500.cdn.optimizely.com
 .a16059120202.cdn.optimizely.com
 .a16233910394.cdn.optimizely.com
@@ -146,6 +147,7 @@
 .a1719570453.cdn.optimizely.com
 .a17252776862.cdn.optimizely.com
 .a17254842358.cdn.optimizely.com
+.a17260515767.cdn.optimizely.com
 .a17260921178.cdn.optimizely.com
 .a17292390176.cdn.optimizely.com
 .a173671602.cdn.optimizely.com
@@ -228,11 +230,9 @@
 .a21362261371.cdn.optimizely.com
 .a21362900246.cdn.optimizely.com
 .a21394690517.cdn.optimizely.com
-.a21645491094.cdn.optimizely.com
 .a21711352012.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21777400434.cdn.optimizely.com
-.a21837592637.cdn.optimizely.com
 .a21861931614.cdn.optimizely.com
 .a21875130079.cdn.optimizely.com
 .a22021240096.cdn.optimizely.com
@@ -257,7 +257,6 @@
 .a23038660059.cdn.optimizely.com
 .a2320460149.cdn.optimizely.com
 .a23208360281.cdn.optimizely.com
-.a2323230643.cdn.optimizely.com
 .a23497771291.cdn.optimizely.com
 .a23730662547.cdn.optimizely.com
 .a23736871217.cdn.optimizely.com
@@ -284,7 +283,6 @@
 .a247012668.cdn.optimizely.com
 .a24704070387.cdn.optimizely.com
 .a24708080542.cdn.optimizely.com
-.a24708110218.cdn.optimizely.com
 .a24717620105.cdn.optimizely.com
 .a24723780022.cdn.optimizely.com
 .a24731660284.cdn.optimizely.com
@@ -300,10 +298,10 @@
 .a24987910037.cdn.optimizely.com
 .a25010540072.cdn.optimizely.com
 .a25011560114.cdn.optimizely.com
-.a25048791137.cdn.optimizely.com
 .a25064110354.cdn.optimizely.com
 .a25166270452.cdn.optimizely.com
 .a25178000050.cdn.optimizely.com
+.a25229420187.cdn.optimizely.com
 .a25237771658.cdn.optimizely.com
 .a25241431181.cdn.optimizely.com
 .a25241461358.cdn.optimizely.com
@@ -312,7 +310,6 @@
 .a25264541367.cdn.optimizely.com
 .a25289140643.cdn.optimizely.com
 .a25342060228.cdn.optimizely.com
-.a25402510199.cdn.optimizely.com
 .a25408250069.cdn.optimizely.com
 .a25451710626.cdn.optimizely.com
 .a25473630273.cdn.optimizely.com
@@ -325,7 +322,6 @@
 .a25621540041.cdn.optimizely.com
 .a25641680262.cdn.optimizely.com
 .a25658580324.cdn.optimizely.com
-.a25668020029.cdn.optimizely.com
 .a25670000279.cdn.optimizely.com
 .a25674010234.cdn.optimizely.com
 .a25678140304.cdn.optimizely.com
@@ -355,6 +351,7 @@
 .a26330300728.cdn.optimizely.com
 .a26334390584.cdn.optimizely.com
 .a26412040784.cdn.optimizely.com
+.a26536550308.cdn.optimizely.com
 .a26537530010.cdn.optimizely.com
 .a26549020246.cdn.optimizely.com
 .a26564690691.cdn.optimizely.com
@@ -364,7 +361,6 @@
 .a26604040285.cdn.optimizely.com
 .a2665520353.cdn.optimizely.com
 .a26669750187.cdn.optimizely.com
-.a26692680197.cdn.optimizely.com
 .a26735090827.cdn.optimizely.com
 .a26749981227.cdn.optimizely.com
 .a26779291179.cdn.optimizely.com
@@ -395,7 +391,6 @@
 .a28007920049.cdn.optimizely.com
 .a28199260220.cdn.optimizely.com
 .a28218570026.cdn.optimizely.com
-.a28409520185.cdn.optimizely.com
 .a28417170302.cdn.optimizely.com
 .a28437560005.cdn.optimizely.com
 .a2854150041.cdn.optimizely.com
@@ -412,7 +407,6 @@
 .a29494440593.cdn.optimizely.com
 .a29563440009.cdn.optimizely.com
 .a29586640232.cdn.optimizely.com
-.a29596130061.cdn.optimizely.com
 .a29598040139.cdn.optimizely.com
 .a29623890030.cdn.optimizely.com
 .a29730520486.cdn.optimizely.com
@@ -433,6 +427,7 @@
 .a30397970302.cdn.optimizely.com
 .a30406320356.cdn.optimizely.com
 .a3058550533.cdn.optimizely.com
+.a3129410271.cdn.optimizely.com
 .a315407138.cdn.optimizely.com
 .a3179610124.cdn.optimizely.com
 .a3187750790.cdn.optimizely.com
@@ -441,6 +436,7 @@
 .a4368606971.cdn.optimizely.com
 .a4477903919.cdn.optimizely.com
 .a4533470681104384.cdn.optimizely.com
+.a4557234282168320.cdn.optimizely.com
 .a4602001816813568.cdn.optimizely.com
 .a4614783295553536.cdn.optimizely.com
 .a4621041136.cdn.optimizely.com
@@ -470,16 +466,17 @@
 .a5676741851611136.cdn.optimizely.com
 .a5698391926112256.cdn.optimizely.com
 .a5728063363743744.cdn.optimizely.com
+.a5729668758765568.cdn.optimizely.com
 .a5740182066954240.cdn.optimizely.com
 .a5763127292198912.cdn.optimizely.com
 .a5807877756026880.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
 .a5961084.cdn.optimizely.com
-.a5976764701736960.cdn.optimizely.com
 .a6023320244584448.cdn.optimizely.com
 .a6040864640729088.cdn.optimizely.com
 .a6071352323473408.cdn.optimizely.com
+.a6076186451771392.cdn.optimizely.com
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
@@ -499,6 +496,7 @@
 .a6561280243.cdn.optimizely.com
 .a659682401.cdn.optimizely.com
 .a6606848644612096.cdn.optimizely.com
+.a6654701179.cdn.optimizely.com
 .a6686257430921216.cdn.optimizely.com
 .a6691694497234944.cdn.optimizely.com
 .a6699546328170496.cdn.optimizely.com
@@ -511,7 +509,6 @@
 .a752092193.cdn.optimizely.com
 .a752671897.cdn.optimizely.com
 .a7589613084.cdn.optimizely.com
-.a7620104.cdn.optimizely.com
 .a7740361315.cdn.optimizely.com
 .a7779470749.cdn.optimizely.com
 .a7808901045.cdn.optimizely.com
@@ -678,7 +675,6 @@
 .adevents.msn.com
 .adeventtracker.spotify.com
 .adeventtrackermonitoring.spotify.com
-.adfinix-ads.sgp1.cdn.digitaloceanspaces.com
 .adgame.waimai.meituan.com
 .adgeo.163.com
 .adgeo.corp.163.com
@@ -728,7 +724,6 @@
 .ads-1821218336.ap-southeast-1.elb.amazonaws.com
 .ads-2005279979.us-west-2.elb.amazonaws.com
 .ads-411442584.us-east-1.elb.amazonaws.com
-.ads-api-kiwi-1493268903.ap-northeast-1.elb.amazonaws.com
 .ads-api-new-2052271615.ap-northeast-1.elb.amazonaws.com
 .ads-api.ft.com
 .ads-api.reddit.com
@@ -831,6 +826,7 @@
 .adservice.google.com
 .adservice.kugou.com
 .adserviceretry.kugou.com
+.adservingvpc-1239633584.eu-west-1.elb.amazonaws.com
 .adsfile.bssdlbig.kugou.com
 .adsfile.qq.com
 .adsfilebssdlbig.ali.kugou.com
@@ -910,7 +906,6 @@
 .adxlog.vivo.com.cn
 .adxstatic.vivo.com.cn
 .adzerk.s3.amazonaws.com
-.ae-alimelog.taobao.com
 .ae.bdstatic.com
 .aecpm.alicdn.com
 .aedns.weixin.qq.com
@@ -1014,6 +1009,7 @@
 .analytics.bloomberg.com
 .analytics.brave.com
 .analytics.cloud.unity3d.com
+.analytics.datatables.net
 .analytics.dev.azure.com
 .analytics.dhts.duke.edu
 .analytics.ecosia.org
@@ -1080,6 +1076,7 @@
 .android.bugly.tencent.com
 .androidtvchannels-pa.googleapis.com
 .androidtvwatsonfe-pa.googleapis.com
+.angel-abma-analytics-cs-alb-prod-1089759001.ap-south-1.elb.amazonaws.com
 .anonymous-analytics.tonkeeper.com
 .anquan.baidu.com
 .ansys.com.data.adobedc.net
@@ -1131,7 +1128,6 @@
 .api.waptest.taobao.com
 .api.xmpush.global.xiaomi.com
 .api.youqian.baidu.com
-.api.youtu.qq.com
 .apiinit.amap.com
 .apikey.map.qq.com
 .apiproxy-log-nlb-0dbe90394fe752bf.elb.us-west-2.amazonaws.com
@@ -1218,7 +1214,6 @@
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
-.astellasusllc.data.adobedc.net
 .atanx.alicdn.com
 .atanx2.alicdn.com
 .athena.archive.org
@@ -2092,6 +2087,7 @@
 .d1p7elpjrt6qav.cloudfront.net
 .d1p7gp5w97u7t7.cloudfront.net
 .d1pdf4c3hchi80.cloudfront.net
+.d1pk6uu6wqrpce.cloudfront.net
 .d1pmhihatyvp1k.cloudfront.net
 .d1pn3cn3ri604k.cloudfront.net
 .d1pozdfelzfhyt.cloudfront.net
@@ -3377,7 +3373,6 @@
 .dmtw0i4zln92b.cloudfront.net
 .dmxhgf4zuwdvu.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
-.dn-growing.qbox.me
 .dn0qt3r0xannq.cloudfront.net
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
@@ -3385,7 +3380,6 @@
 .dn7u3i0t165w2.cloudfront.net
 .dn9uzzhcwc0ya.cloudfront.net
 .dna8twue3dlxq.cloudfront.net
-.dnbbankasa.data.adobedc.net
 .dnconfig.cmpassport.com
 .dne6rbzy5csnc.cloudfront.net
 .dnet.mb.qq.com
@@ -3412,6 +3406,7 @@
 .do69ll745l27z.cloudfront.net
 .doc830ytc7pyp.cloudfront.net
 .docerad.wps.cn
+.docs.gravatar.com
 .dodk8rb03jif9.cloudfront.net
 .dof9zd9l290mz.cloudfront.net
 .dog89nqcp3al4.cloudfront.net
@@ -3668,7 +3663,6 @@
 .entitlements.jwplayer.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
-.entrykeyid.com.data.adobedc.net
 .epic-matomo-prd-fxccc0gmebhpdjgh.z01.azurefd.net
 .epro.sogou.com
 .epro.sohu.com
@@ -3733,6 +3727,7 @@
 .expressscripts.data.adobedc.net
 .ext.chtbl.com
 .extlog.snssdk.com
+.ezrhirglfm.data.adobedc.net
 .f.convertkit.com
 .f.convertkit.com.cdn.cloudflare.net
 .f10.baidu.com
@@ -3768,7 +3763,6 @@
 .fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
-.ffc-word-telemetry.officeapps.live.com
 .ffe390afd658c19dcbf707e0597b846d.de
 .ffg-analyticsk3nvxfne4dp4s.servicebus.windows.net
 .fifththirdbank.data.adobedc.net
@@ -3827,7 +3821,6 @@
 .fpt.microsoft.com
 .fra-01.braze.eu
 .fra-02.braze.eu
-.frc-visio-telemetry.officeapps.live.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
@@ -4189,6 +4182,7 @@
 .ichnaea-web.netflix.com
 .ichnaea.dradis.netflix.com
 .ichnaea.netflix.com
+.icicisecuritiesltd.data.adobedc.net
 .id.google.com
 .idce7nfume.data.adobedc.net
 .identity.nel.measure.office.net
@@ -4208,6 +4202,7 @@
 .igexin.com
 .ignifyecom.s3.amazonaws.com
 .ihg.com.data.adobedc.net
+.iiu7nbpt0d.data.adobedc.net
 .iix5saebir.data.adobedc.net
 .ikcode.baidu.com
 .ilce.alicdn.com
@@ -4287,6 +4282,7 @@
 .inte.sogoucdn.com
 .inte.sohu.com
 .intensedebate.com
+.interbank.data.adobedc.net
 .interest.mix.sina.com.cn
 .interface.bilibili.com
 .intergient.com
@@ -4360,6 +4356,7 @@
 .jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
+.k8s-matomo-matomoin-1abe0536fc-1571093737.us-east-1.elb.amazonaws.com
 .kalstats.kaltura.com
 .kbox-analytics-prod.s3-accelerate.amazonaws.com
 .kbox-analytics-prod.s3.amazonaws.com
@@ -4440,6 +4437,7 @@
 .location-sg.tiktokv.com
 .location-v6-sg.tiktokv.com
 .location-v6-va.tiktokv.com
+.location-va.tiktokv.com
 .location.services.mozilla.com
 .location.ximalaya.com
 .log-04e01638.us.v2.we-stats.com
@@ -4460,8 +4458,8 @@
 .log-58144bf0.we-stats.com
 .log-5d65a0ab.us.v2.we-stats.com
 .log-788fdc13.suk.v2.we-stats.com
-.log-7b4df495.us.v2.we-stats.com
 .log-7db8f4a6.us.v2.we-stats.com
+.log-7ef308be.us.v2.we-stats.com
 .log-86a11b6f.us.v2.we-stats.com
 .log-87e12e85.suk.v2.we-stats.com
 .log-9449377.eu-west-2.elb.amazonaws.com
@@ -4650,7 +4648,6 @@
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
 .mam.netease.com
-.mam6.netease.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .marcus.com.data.adobedc.net
@@ -4662,6 +4659,7 @@
 .marketing.dropbox.com
 .marketing.mangacopy.com
 .marketo.clearbit.com
+.marriottvacationclub.com.data.adobedc.net
 .mars.jd.com
 .marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
@@ -4672,7 +4670,6 @@
 .matchbin-assets.s3.amazonaws.com
 .matomo-alb-1841731790.us-east-1.elb.amazonaws.com
 .matomo-lb-1420184415.us-east-1.elb.amazonaws.com
-.matomo-prod-lb-935143521.us-east-1.elb.amazonaws.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics3-898024192.us-east-2.elb.amazonaws.com
@@ -4715,7 +4712,6 @@
 .mediation.unity3d.com
 .mediavine.com
 .mellowads.b-cdn.net
-.mercedes.data.adobedc.net
 .mercury-sdk.snssdk.com
 .mercury.akamaized.net
 .mercury.jd.com
@@ -4786,6 +4782,7 @@
 .mmgame.qpic.cn
 .mn.qwant.com
 .mnaspm.com
+.mnjyelvr0z.data.adobedc.net
 .mo.baidu.com
 .mo.kugou.com
 .mo.res.wpscdn.cn
@@ -4896,7 +4893,6 @@
 .nadvideo.baidu.com
 .nadvideo2.baidu.com
 .napaprolink.com.data.adobedc.net
-.nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
 .navispherecarrier.com.data.adobedc.net
@@ -5022,7 +5018,6 @@
 .orbsrv.com
 .org.data.adobedc.net
 .ort-stsdk.vivo.com.cn
-.os-mon.snssdk.com
 .os-mon.zijieapi.com
 .osc-collector-lb-931361364.us-west-2.elb.amazonaws.com
 .osdkupdatenw.com
@@ -5358,6 +5353,7 @@
 .pyk.in-neo.cn
 .q0jo16uy1r.data.adobedc.net
 .qalsqqphhy.data.adobedc.net
+.qantasairways.data.adobedc.net
 .qapm.baidu.com
 .qc.arstechnica.com
 .qc.newyorker.com
@@ -5586,7 +5582,6 @@
 .scorecardresearch.com
 .scribe.twitter.com
 .sd-tagging.azurefd.net
-.sdac.lenovomm.com
 .sdfp.snssdk.com
 .sdk-collector-prod-723125464.eu-central-1.elb.amazonaws.com
 .sdk.fra-01.braze.eu.cdn.cloudflare.net
@@ -5656,7 +5651,6 @@
 .sg.a.stat.mi.com
 .sg2p.wns.windows.com
 .sgg.southcn.com
-.sgproof.com.data.adobedc.net
 .sgtm.springer.com
 .sgtus1-powerpoint-telemetry-vip.officeapps.live.com
 .sgtus1-word-telemetry-vip.officeapps.live.com
@@ -5756,6 +5750,7 @@
 .splashqqlive.gtimg.com
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spocs.mozilla.net
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spotops.spot.im
@@ -5806,7 +5801,6 @@
 .stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
-.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
@@ -5926,7 +5920,6 @@
 .t10.baidu.com
 .t11.baidu.com
 .t12.baidu.com
-.t17.market.xiaomi.com
 .t2.market.xiaomi.com
 .t3.market.xiaomi.com
 .t4.market.xiaomi.com
@@ -6008,6 +6001,7 @@
 .tgtus1-powerpoint-telemetry-vip.officeapps.live.com
 .theamericanautoassociation.data.adobedc.net
 .thecooperativebank.data.adobedc.net
+.themethodisthospitalhouston.data.adobedc.net
 .theta.sogou.com
 .theta.sogoucdn.com
 .theweathercompany.data.adobedc.net
@@ -6158,7 +6152,6 @@
 .u-mob.cn
 .u-x.jd.com
 .u.360.cn
-.u.api.look.360.cn
 .u.ctrip.com
 .u1.img.mobile.sina.cn
 .uc.ucweb.com
@@ -6208,6 +6201,7 @@
 .uniformadvantage.data.adobedc.net
 .union.360.cn
 .union.baidu.com
+.union.click.jd.com
 .union.discuz.qq.com
 .union.jd.com
 .union.mi.com
@@ -6341,6 +6335,7 @@
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
 .w4aa025brr.data.adobedc.net
+.w8a27b25y5.data.adobedc.net
 .wa.gtimg.com
 .walmartasda.data.adobedc.net
 .wan.360.cn
@@ -6379,7 +6374,6 @@
 .webstat.ws.126.net
 .wegmansfoods.data.adobedc.net
 .weishi.baidu.com
-.wellainternational.data.adobedc.net
 .wellpoint.data.adobedc.net
 .weus2watcab01.blob.core.windows.net
 .weus2watcab02.blob.core.windows.net
@@ -6463,6 +6457,7 @@
 .xlog.snssdk.com
 .xlog.tiktokv.com
 .xlog16-normal-c-useast1a.tiktokv.com
+.xlog16-platform-ycru.tiktokv.com
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
@@ -6471,6 +6466,7 @@
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
 .xsolid.baidu.com
+.xtugdre3wk.data.adobedc.net
 .xwqxahorsr.data.adobedc.net
 .xy.fbcdn.net
 .xycdn.com
