--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-08-06 10:38:53
-# Total rules: 6733
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-06 14:32:39
+# Total rules: 6743
 
 .0914.global.ssl.fastly.net
 .0a0d-d3l1vr.b-cdn.net
@@ -779,6 +779,7 @@
 .adserver-vpc-alb-1-725730730.us-west-2.elb.amazonaws.com
 .adserver.bing.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
+.adservice.aliexpress.com
 .adservice.google.com
 .adservice.kugou.com
 .adserviceretry.kugou.com
@@ -1339,6 +1340,7 @@
 .bradcroninnapo82.myshopify.com
 .brand.sogou.com
 .brandadsstatic.vivo.com.cn
+.brands.aliexpress.com
 .braze.com
 .brg0.com
 .browser-intake-datadoghq.com
@@ -1496,6 +1498,7 @@
 .clc.stackoverflow.com
 .cleaner.baidu.com
 .click.alibaba.com
+.click.aliexpress.com
 .click.alimama.com
 .click.aliyun.com
 .click.bes.baidu.com
@@ -3729,6 +3732,7 @@
 .forms-emea.lenovo.com
 .forms.lenovo.com
 .fourier.alibaba.com
+.fourier.aliexpress.com
 .fourier.taobao.com
 .fourmtagservices.appspot.com
 .fp-cdn.azureedge.net
@@ -3889,6 +3893,7 @@
 .gtm.tipranks.com
 .gtm.wise.com
 .gtmsdd.alicdn.com
+.gtreus.aliexpress.com
 .gtrk.s3.amazonaws.com
 .guanjia.baidu.com
 .guardianapps.co.uk
@@ -3928,6 +3933,7 @@
 .hd.xiaomi.com
 .hd2.3g.qq.com
 .hdfcbank.com.data.adobedc.net
+.hdns.ksyun.com
 .hdtu.oss-cn-beijing.aliyuncs.com
 .he5ek4z54w.data.adobedc.net
 .heads-fa.spotify.com
@@ -4291,6 +4297,7 @@
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
 .kinesis.eu-west-1.amazonaws.com
+.kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
 .kj65rdasz.appspot.com
 .kj6787rsd.appspot.com
@@ -4724,6 +4731,7 @@
 .mobileservice.cn
 .mobondhrd.appspot.com
 .mobwsa.ximalaya.com
+.moduleanalysis.aliexpress.com
 .mon-i18n.tiktokv.com
 .mon-ru.tiktokv.com
 .mon-sg.tiktokv.com
@@ -5023,6 +5031,7 @@
 .pcfg.wps.cn
 .pcm-img.zhls.qq.com
 .pcmx.autohome.com.cn
+.pcookie.aliexpress.com
 .pcookie.tanx.com
 .pcookie.taobao.com
 .pcstat.kugou.com
@@ -5680,6 +5689,7 @@
 .ssc.voacantonese.com
 .ssl-cdn.static.browser.mi-img.com
 .ssl-google-analytics.l.google.com
+.ssp.kss.ksyun.com
 .ssp.qq.com
 .sspapi-prd.samsungrs.com
 .sstats.adobe.com
